--- a/src/sass/modules/navigation/navigation.scss
+++ b/src/sass/modules/navigation/navigation.scss
@@ -167,6 +167,52 @@ body.has-footer {
 		z-index: $zindex-negative;
 	}
 
+	&.has-title {
+		align-items: center;
+		display: flex;
+		justify-content: flex-start;
+
+		@media #{$phone} {
+			ul {
+				display: flex;
+				flex-direction: column;
+				height: auto;
+				left: 1rem;
+				top: calc(#{$sub-nav-height} - 0.2rem);
+
+				li {
+					margin: 0;
+
+					a::after { display: none; }
+				}
+			}
+		}
+	}
+
+	.sub-nav--title {
+		align-items: center;
+		color: $color-purple;
+		display: flex;
+		font-size: $font-size-medium;
+		font-weight: $font-weight-semibold;
+		height: 100%;
+		padding: 0 $grid-gutter 0 $grid-gutter;
+
+		.sub-nav--icon { display: none; }
+
+		@media #{$phone} {
+			cursor: pointer;
+			position: relative;
+
+			.sub-nav--icon {
+				display: inline-block;
+				left: 0.3rem;
+				position: relative;
+				top: 0.1rem;
+			}
+		}
+	}
+
 	ul,
 	li,
 	a {
@@ -273,5 +319,14 @@ body.has-footer {
 				margin-top: calc(#{$global-banner-height} + #{$header-height});
 			}
 		}
+	}
+}
+
+//Had to use a mixin to share the styles within a media query
+@media #{$phone} {
+	.subnav-dropdown {
+		@include dropdown-menu;
+
+		&.hide-menu { display: none !important; }
 	}
 }
