simplify grid code with @each loops

--- a/src/sass/modules/css-grid/css-grid-mixins.scss
+++ b/src/sass/modules/css-grid/css-grid-mixins.scss
@@ -1,11 +1,13 @@
 @mixin fallback-grid($percent) {
-	@media #{$tablet} { float: left;
+	@media #{$tablet} {
+		float: left;
 		width: calc(#{$percent} - #{$grid-gutter});//SAFARI 9
 	}
 }
 
 @mixin fallback-grid_desktop($percent) {
-	@media #{$desktop} { float: left;
+	@media #{$desktop} {
+		float: left;
 		width: calc(#{$percent} - #{$grid-gutter});//SAFARI 9
 	}
 }
