--- a/src/sass/modules/css-grid/css-grid-main.scss
+++ b/src/sass/modules/css-grid/css-grid-main.scss
@@ -1,79 +1,48 @@
 /* -----------------------------
-Actual CSS Grid Classes
+Grid Classes
+
+Standard sizes are named, non-standard sizes are numbered.
 -------------------------------- */
-//mimics '.row' from original grid
+$grid-gutter: 1rem !default;
+
+//TODO Consider making this a card class
+.grid { .card { margin: 0; } } //required to span cards 100%
+
+$gridConfig: '1'             '1',
+	'sixth'         '2',
+	'fourth'        '3',
+	'third'         '4',
+	'5'             '5',
+	'half'          '6',
+	'7'             '7',
+	'two-thirds'    '8',
+	'three-fourths' '9',
+	'five-sixths'   '10',
+	'11'            '11',
+	'full'          '12';
+
 .grid-wrapper {
 	margin: auto;
 	max-width: $global-content-width;
 	width: 100%;
 }
 
-//use grid to make a new 12 column grid
-.grid {
+.grid-layout,
+.grid-padding { padding: $grid-gutter; }
 
+.grid {
 	display: block;
 
 	grid-template-columns: repeat(12, 1fr);
 	overflow: auto;
 
-	//Pad the grid
-	&.grid-padding {
-		padding: $grid-gutter;
-	}
-
 	* {
-		@supports(display: grid) { @include grid-column(12); width: auto; }//By default, content will span all 12 columns
+		@supports (display: grid) {
+			@include grid-column(12);
+
+			width: auto;
+		}
 	}
-
-	//12 10 9 8 6 4 3 2
-	.grid--full,
-	.grid-12 { @include grid-column(12); }
-
-	.grid--five-sixths,
-	.grid-10 { @include grid-column(10); }
-
-	.grid--three-fourths,
-	.grid-9 { @include grid-column(9); }
-
-	.grid--two-thirds,
-	.grid-8 { @include grid-column(8); }
-
-	.grid--half,
-	.grid-6 { @include grid-column(6); }
-
-	.grid--third,
-	.grid-4 { @include grid-column(4); }
-
-	.grid--fourth,
-	.grid-3 { @include grid-column(3); }
-
-	.grid--sixth,
-	.grid-2 { @include grid-column(2); }
-
-	//Desktop mixin for 12 10 9 8 6 4 3 2
-	.grid--full_desktop,
-	.grid-12_desktop { @include grid-column_desktop(12); }
-
-	.grid--five-sixths_desktop,
-	.grid-10_desktop { @include grid-column_desktop(10); }
-
-	.grid--three-fourths_desktop,
-	.grid-9_desktop { @include grid-column_desktop(9); }
-
-	.grid--two-thirds_desktop,
-	.grid-8_desktop { @include grid-column_desktop(8); }
-
-	.grid--half_desktop,
-	.grid-6_desktop { @include grid-column_desktop(6); }
-
-	.grid--third_desktop,
-	.grid-4_desktop { @include grid-column_desktop(4); }
-
-	.grid--fourth_desktop,
-	.grid-3_desktop { @include grid-column_desktop(3); }
-
-	.grid--sixth_desktop,
-	.grid-2_desktop { @include grid-column_desktop(2); }
 
 	//Make grid full width and centered on tablet
 	&.grid--tablet_full {
@@ -81,10 +50,24 @@ Actual CSS Grid Classes
 			margin: 0 auto;
 			max-width: 45rem;
 		}
-	}//IE and Safari//For IE and Safari mobile//For IE and Safari display
-	@supports(display: grid) { display: grid;
-		grid-gap: 0;
-		@media #{$tablet} { grid-gap: $grid-gutter; } }//For non-fallbacks use grid
-}
+	}
 
-.grid { .card { margin: 0; } } //required to span cards 100%
+	@supports (display: grid) {
+		display: grid;
+		grid-gap: 0;
+
+		@media #{$tablet} { grid-gap: $grid-gutter; }
+	}
+
+	@each $size in $gridConfig {
+		.grid--#{nth($size, 1)} {
+			@include grid-column(#{nth($size, 2)});
+		}
+	}
+
+	@each $size in $gridConfig {
+		.grid--#{nth($size, 1)}_desktop {
+			@include grid-column_desktop(#{nth($size, 2)});
+		}
+	}
+}
