--- a/src/sass/modules/_modules.scss
+++ b/src/sass/modules/_modules.scss
@@ -14,6 +14,7 @@
 @import 'banner/banner';
 @import 'table/table';
 @import 'navigation/navigation';
+@import 'navigation/mobile-menu';
 @import 'overpanel/overpanel';//dependent on header being first
 @import 'footer/footer';
 @import 'icons/icons';
