--- a/src/sass/experimental/mobilemenu.scss
+++ b/src/sass/experimental/mobilemenu.scss
@@ -114,23 +114,23 @@ $sidebar-background: #354052;
 	}
 }
 
-.button--mobile-sidebar {
-	@extend %icon-white;
-	@extend .button;
-	@extend .button--transparent;
-	@extend .button--icon;
-	@extend .button--white;
-	@media #{$tablet} { display: none !important; }
-}
+// .button--mobile-sidebar {
+// 	@extend %icon-white;
+// 	@extend .button;
+// 	@extend .button--transparent;
+// 	@extend .button--icon;
+// 	@extend .button--white;
+// 	@media #{$tablet} { display: none !important; }
+// }
 
-.mobile-profile {
-	padding-top: $space-m;
-
-	.button--mobile-sidebar {
-		display: inline-block;
-		margin-left: $space-m !important;
-	}
-}
+// .mobile-profile {
+// 	padding-top: $space-m;
+//
+// 	.button--mobile-sidebar {
+// 		display: inline-block;
+// 		margin-left: $space-m !important;
+// 	}
+// }
 
 .mobile-profile--account {
 	display: block;
