--- a/src/sass/modules/tooltip/_tooltip.scss
+++ b/src/sass/modules/tooltip/_tooltip.scss
@@ -11,6 +11,7 @@ i.paragon-clippy {
 	@extend .dashing-icon--question-filled;
 	cursor: help;
 	display: inline-block;
+	font-size: $font-size-normal;
 
 	@media #{$phone} {
 		border-radius: 50px;
@@ -20,13 +21,23 @@ i.paragon-clippy {
 	}
 }
 
-span .paragon-tooltip,
-p .paragon-tooltip,
-label .paragon-clippy {
-	margin-left: 0.2rem;
+span,
+p,
+label {
+	.paragon-clippy,
+	.paragon-tooltip {
+		margin-left: $space-xxs;
+	}
 }
 
-span.paragon-tooltip { display: inline-block; }
+// Center icon when used with a smaller label
+label {
+	.paragon-clippy,
+	.paragon-tooltip {
+		position: relative;
+		top: 0.1rem;
+	}
+}
 
 /* Custom Tippy.js Themes
   =========================================================================== */
