Remove margin from cards nested in grid

--- a/src/sass/modules/css-grid/css-grid-main.scss
+++ b/src/sass/modules/css-grid/css-grid-main.scss
@@ -65,4 +65,6 @@ $gridConfig: '1'             '1',
 			@include grid-column_desktop(#{nth($size, 2)});
 		}
 	}
+	
+	.card { margin: 0; }//remove margin for cards within grid
 }
