--- a/src/paragon-framework/modules/typography/_typography.scss
+++ b/src/paragon-framework/modules/typography/_typography.scss
@@ -30,8 +30,8 @@
 }
 
 body {
-	background-color: $color-background;
-	color: $color-text;
+	// background-color: $color-background;
+	// color: $color-text;
 	font-family: $font-family-body;
 	font-size: $font-size-normal;
 }
