--- a/src/paragon-styleguide/example-page.scss
+++ b/src/paragon-styleguide/example-page.scss
@@ -1,8 +1,7 @@
 $example-global-content-width: 800px !default;
 
-@import '../paragon';
-// @import '../../paragon-components/paragon-components';
-@import '../base/colors/given-colors';
+// @import '../paragon';
+// @import '../base/colors/given-colors';
 @import 'typography';
 @import 'image';
 @import 'prism';
