refactor - update configs

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -1,8 +1,8 @@
 // This file is specific to the paragon.samaritanministries.org application
 
-@use "../paragon-framework";//imports vendor and base (core)
+//@use "../paragon-framework";//imports vendor and base (core)
 
-@use "../paragon-styleguide";//only for paragon documentation pages (this application)
+//@use "../paragon-styleguide";//only for paragon documentation pages (this application)
 
 //@import "../paragon/experimental"; //We probably can kill this folder?
 
