--- a/src/paragon-styleguide/image.scss
+++ b/src/paragon-styleguide/image.scss
@@ -17,65 +17,65 @@
 	padding-bottom: 43.5%; //auto-scale image container
 	width: 100%;
 
-	&#accessibility--contrast-ratios { background-image: url('../../img/accessibility--contrast-ratios.png'); }
-	&#accessibility--color-blindness { background-image: url('../../img/accessibility--color-blindness.png'); }
+	&#accessibility--contrast-ratios { background-image: url('../img/accessibility--contrast-ratios.png'); }
+	&#accessibility--color-blindness { background-image: url('../img/accessibility--color-blindness.png'); }
 
-	&#accessibility--touch-targets { background-image: url('../../img/accessibility--touch-targets.png');
+	&#accessibility--touch-targets { background-image: url('../img/accessibility--touch-targets.png');
 		padding-bottom: 19%; }
 	//
-	&#actions--action-verb { background-image: url('../../img/actions--action-verb.png');
+	&#actions--action-verb { background-image: url('../img/actions--action-verb.png');
 		padding-bottom: 19%; }
 
-	&#actions--hierarchy { background-image: url('../../img/actions--hierarchy.png');
+	&#actions--hierarchy { background-image: url('../img/actions--hierarchy.png');
 		padding-bottom: 13%; }
 
-	&#actions--color { background-image: url('../../img/actions--color.png');
+	&#actions--color { background-image: url('../img/actions--color.png');
 		padding-bottom: 13%; }
 	//
 	&#navigation--basic {
-		background-image: url('../../img/navigation--basic.svg');
+		background-image: url('../img/navigation--basic.svg');
 		padding-bottom: 19%;
 	}
 
 	&#navigation--color {
-		background-image: url('../../img/navigation--color.svg');
+		background-image: url('../img/navigation--color.svg');
 		padding-bottom: 19%;
 	}
 
 	&#navigation--links {
-		background-image: url('../../img/navigation--links.svg');
+		background-image: url('../img/navigation--links.svg');
 		padding-bottom: 19%;
 	}
 
 	&#navigation--back {
-		background-image: url('../../img/navigation--back.svg');
+		background-image: url('../img/navigation--back.svg');
 		padding-bottom: 23%;
 	}
 
 	&#navigation--banner {
-		background-image: url('../../img/navigation--banner.svg');
+		background-image: url('../img/navigation--banner.svg');
 		padding-bottom: 23%;
 	}
 
-	&#navigation--tabs { background-image: url('../../img/navigation--tabs.svg'); }
+	&#navigation--tabs { background-image: url('../img/navigation--tabs.svg'); }
 
 	&#navigation--tabs_code {
-		background-image: url('../../img/navigation--tabs_code.svg');
+		background-image: url('../img/navigation--tabs_code.svg');
 		padding-bottom: 23%;
 	}
 
-	&#tags--options { background-image: url('../../img/tags--options.png');
+	&#tags--options { background-image: url('../img/tags--options.png');
 		padding-bottom: 13%; }
 	//
 	// &#tooltip--large {
-	//   background-image: url("../../img/tooltip--large.svg");
+	//   background-image: url("../img/tooltip--large.svg");
 	//   padding-bottom: 29%;
 	// }
 
-	&#typography--specimen { background-image: url('../../img/typography-specimen.svg');
+	&#typography--specimen { background-image: url('../img/typography-specimen.svg');
 		padding-bottom: 55%; }
 
-	&#typography--line-length { background-image: url('../../img/typography--line-length.png');
+	&#typography--line-length { background-image: url('../img/typography--line-length.png');
 		padding-bottom: 40%; }
 }
 
