--- a/src/paragon-framework/modules/_modules.scss
+++ b/src/paragon-framework/modules/_modules.scss
@@ -5,7 +5,7 @@
 @import 'forms/themed-elements';
 @import 'forms/card-controls';
 // @import 'actions/actions'; // Replaced by component "actions"
-@import 'actions/button-group';
+// @import 'actions/button-group';
 @import 'pagination/pagination';
 @import 'tooltip/tooltip';
 @import 'card/card';
