--- a/src/paragon-styleguide/example-page.scss
+++ b/src/paragon-styleguide/example-page.scss
@@ -371,6 +371,10 @@ h2 {
 	}
 }
 
+.card--example-white {
+	background-color: rgb(40, 51, 109);
+}
+
 /* Checkboxes Page
   ================================================== */
 
