- update nvm version to 12.13.0 - update changelogs - increase version of paragon-components to 0.1.0 - increase version of paragon-framework to 2.5.2 - restore original module import (backwards compatible) - add modules-components file while components are being worked on

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -6,14 +6,13 @@
 }
 
 @import "../paragon-framework";//imports vendor and base (core)
-
-//@import "../paragon/experimental"; //We probably can kill this folder?
+// @import "../paragon-framework/paragon"; - legacy import, to enable kill all other imports except styleguide
 
 // Import components here - this could reside in a "config" file?
 @import "../paragon-framework/actions/actions"; //Component "Actions"
 @import "../paragon-framework/grid/grid"; //Component "Grid"
 
 //Import modules here (before they are made official components)
-@import "../paragon-framework/modules/modules";
+@import "../paragon-framework/modules/modules-components";
 
 @import "../paragon-styleguide"; //only for paragon documentation pages (this application)
